--- a/docker-compose-CeleryExecutor.yml
+++ b/docker-compose-CeleryExecutor.yml
@@ -16,7 +16,7 @@ services:
         #     - ./pgdata:/var/lib/postgresql/data/pgdata
 
     webserver:
-        image: puckel/docker-airflow:1.9.0-4
+        build: .
         restart: always
         depends_on:
             - postgres
@@ -30,11 +30,12 @@ services:
             # - POSTGRES_DB=airflow
             # - REDIS_PASSWORD=redispass
         volumes:
-            - ./dags:/usr/local/airflow/dags
+            - $AIRFLOW_HOME/dags:/usr/local/airflow/dags
+            - $AIRFLOW_HOME/logs:/usr/local/airflow/logs
             # Uncomment to include custom plugins
             # - ./plugins:/usr/local/airflow/plugins
         ports:
-            - "8080:8080"
+            - "9876:8080"
         command: webserver
         healthcheck:
             test: ["CMD-SHELL", "[ -f /usr/local/airflow/airflow-webserver.pid ]"]
@@ -43,7 +44,7 @@ services:
             retries: 3
 
     flower:
-        image: puckel/docker-airflow:1.9.0-4
+        build: .
         restart: always
         depends_on:
             - redis
@@ -55,12 +56,13 @@ services:
         command: flower
 
     scheduler:
-        image: puckel/docker-airflow:1.9.0-4
+        build: .
         restart: always
         depends_on:
             - webserver
         volumes:
-            - ./dags:/usr/local/airflow/dags
+            - $AIRFLOW_HOME/dags:/usr/local/airflow/dags
+            - $AIRFLOW_HOME/logs:/usr/local/airflow/logs
             # Uncomment to include custom plugins
             # - ./plugins:/usr/local/airflow/plugins
         environment:
@@ -74,12 +76,13 @@ services:
         command: scheduler
 
     worker:
-        image: puckel/docker-airflow:1.9.0-4
+        build: .
         restart: always
         depends_on:
             - scheduler
         volumes:
-            - ./dags:/usr/local/airflow/dags
+            - $AIRFLOW_HOME/dags:/usr/local/airflow/dags
+            - $AIRFLOW_HOME/logs:/usr/local/airflow/logs
             # Uncomment to include custom plugins
             # - ./plugins:/usr/local/airflow/plugins
         environment:
